# sgr-deep-research

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PULL_REQUEST.md  QUICKSTART_CONFLUENCE.md  README.md  agents.yaml  agents.yaml.example  api_server.py  config.yaml.example  debug_sgr_config.py  demo_agent_Gigachat.ipynb  docker-compose.dist.yaml  ecs.patch  entrypoint.sh  example_report.md  executors.py  gui_app.py  index.html  logging_config.yaml  mkdocs.yml  models.py  prompts.yaml  pyproject.toml  pytest.ini  requirements.txt  run_agent.py  settings.py  sgr.patch  sgr_agent.py  sgr_small_model_adapter.py  (+8 more)
SGR-Agent's-Workflow/: index.html
SGR-Demonstration/: index.html
SGR-Description-API/: index.html
SGR-Integration-&-Examples/: index.html
SGR-Quick-Start/: index.html
SGR-Summary-table/: index.html
SGR-vs-Function-Calling_-When-to-Use-Each-Approach/: index.html
api/: streaming.py
batch_results/: 01_В_каком_году_Ибн_Фадлан_впервые_описал_башкир.md  02_Кто_возглавил_восстание_башкир_в_1676_году.md  03_Сколько_длилось_Башкирское_восстание_17041711_и_в.md  05_Какова_основная_тема_статьи_Ксавье_Ле_Торривеллека.md  20250918_003156_Первое описание башкир у Ибн Фадлана датировка.md
benchmark/: README.md  benchmark_agent.py  env.example  prompts.py  run_simpleqa_bench.py  simpleqa_benchmark_results.md  simpleqa_benchmark_results.md.md  utils.py
clients/: simple_shine_cli.py
docs/: CONFLUENCE_AGENT.md  CUSTOM_AGENTS.md  QWEN3_THINKING_SUPPORT.md  (+8 more)
(+443 files in other folders)
